feat: home photo list

--- a/src/components/Common/global-header-sign.less
+++ b/src/components/Common/global-header-sign.less
@@ -45,7 +45,7 @@
 
   .publish {
     line-height: 64px;
-    i {
+    .icon {
       position: absolute;
       left: 10px;
       top: 50%;
@@ -59,7 +59,7 @@
     height: 100%;
     text-align: center;
     position: relative;
-    //i{
+    //.icon {
     //  position: absolute;
     //  left: 50%;
     //  top: 50%;
