--- a/src/pages/home/home-banner.less
+++ b/src/pages/home/home-banner.less
@@ -4,7 +4,7 @@
   padding-bottom: 35%;
   position: relative;
   overflow: hidden;
-  transition: background-image 0.5s;
+  // transition: background-image 0.5s;
 
   .hidden {
     display: none;
