--- a/src/blocks/user/user-sign-modal.less
+++ b/src/blocks/user/user-sign-modal.less
@@ -6,16 +6,14 @@
   }
 
   .head {
-    padding: 13px 0;
+    display: flex;
     height: 56px;
-    line-height: 30px;
     background: @color_blue3;
-    text-align: center;
+    align-items: center;
+    justify-content: center;
     img {
       width: auto;
       height: 30px;
-      position: relative;
-      top: -2px;
     }
     strong {
       display: inline-block;
@@ -32,10 +30,8 @@
 
   :global {
     .ant-modal-content {
-      overflow: hidden;
-    }
-    .ant-modal-body {
       padding: 0;
+      overflow: hidden;
     }
   }
 }
