--- a/src/components/Common/global-header-search.less
+++ b/src/components/Common/global-header-search.less
@@ -1,12 +1,10 @@
 .search {
   display: block;
   padding: 16px 10px;
-  height: 100%;
 
   .icon {
-    display: block;
-    height: 100%;
-    padding: 4px 6px;
+    display: inline-block;
+    padding: 6px 12px;
     i {
       font-size: 24px;
       color: rgba(255, 255, 255, 0.65);
@@ -14,19 +12,22 @@
   }
 
   :global {
+    .anticon {
+      font-size: 20px;
+      color: rgba(255, 255, 255, 0.65);
+    }
+    .ant-input-affix-wrapper {
+      background: none;
+    }
     .ant-input {
       color: rgba(255, 255, 255, 0.65);
       background: none;
-    }
-    .ant-input:focus {
-      box-shadow: none;
-    }
-    .ant-input-affix-wrapper .ant-input-suffix {
-      right: 6px;
-    }
-    .ant-input-search-icon {
-      font-size: 24px;
-      color: rgba(255, 255, 255, 0.65);
+      &:focus {
+        box-shadow: none;
+      }
+      &::placeholder {
+        color: rgba(255, 255, 255, 0.65);
+      }
     }
   }
 }
