--- a/src/blocks/photo/photo-list.less
+++ b/src/blocks/photo/photo-list.less
@@ -117,9 +117,6 @@
     height: 100%;
     transition: all 0.3s;
   }
-  &:hover img {
-    transform: scale(1.1);
-  }
   .cover {
     width: 100%;
     height: 100%;
@@ -148,18 +145,27 @@
       margin-top: -20px;
       text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
     }
-    .edit {
-      position: absolute;
-      right: 10px;
-      bottom: 10px;
-      color: #fff;
-      i {
-        font-size: 20px;
-      }
+  }
+  .edit {
+    display: none;
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    color: #fff;
+    i {
+      font-size: 20px;
     }
   }
-  &:hover .cover {
-    opacity: 1;
+  &:hover {
+    img {
+      transform: scale(1.1);
+    }
+    .cover {
+      opacity: 1;
+    }
+    .edit {
+      display: block;
+    }
   }
 }
 
